@@ -2481,9 +2481,9 @@ module Asciidoctor
           else
             label = index
           end
-          %(#{anchor}<sup>[<a anchor="_footnotedef_#{index}">#{label}</a>]</sup>)
+          %(<sup class="wj">#{anchor}[<a anchor="_footnotedef_#{index}">#{label}</a>]</sup>)
         elsif node.type == :xref
-          %(<sup><font color="#{theme.role_unresolved_font_color}">[#{node.text}]</font></sup>)
+          %(<sup class="wj"><font color="#{theme.role_unresolved_font_color}">[#{node.text}]</font></sup>)
         else
           log :warn, %(unknown footnote type: #{node.type.inspect})
           nil
