@@ -13,5 +13,6 @@ require_relative 'prawn/formatted_text/arranger'
 require_relative 'prawn/formatted_text/box'
 require_relative 'prawn/formatted_text/fragment'
 require_relative 'prawn/formatted_text/indented_paragraph_wrap'
+require_relative 'prawn/formatted_text/line_wrap'
 require_relative 'prawn/formatted_text/protect_bottom_gutter'
 require_relative 'prawn/extensions'
